test/files/neg/t7494-right-after-before/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:rafter-before-1 -Vphases
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
